fix: less agressive wrapping

--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -1157,7 +1157,7 @@ label[for] {
 	}
 	.activity-description {
 		line-height: 1.4;
-		word-break: break-all;
+		word-break: break-word;
   		overflow-wrap: break-word;
 	}
 }
